# This project was generated with Unknown using template: https://github.com/beeware/briefcase-template@v0.3.14
[tool.briefcase]
project_name = "Zhihu Decrypt"
bundle = "com.github.cxzlw"
version = "0.0.1"
url = "https://github.com/cxzlw/zhihuDecryptApp"
license = "GNU General Public License v3 (GPLv3)"
author = "cxzlw"
author_email = "cxzlw@gmx.com"

[tool.briefcase.app.zhihuDecryptApp]
formal_name = "Zhihu Decrypt"
description = "The app to decrypt zhihu's encrypted (probably not) passages. "
long_description = """More details about the app should go here.
"""
icon = "src/zhihuDecryptApp/resources/zhihuDecryptApp"
sources = [
    "src/zhihuDecryptApp",
]
test_sources = [
    "tests",
]

requires = [
]
test_requires = [
    "pytest",
]

[tool.briefcase.app.zhihuDecryptApp.macOS]
requires = [
    "toga-cocoa~=0.3.1",
    "std-nslog~=1.0.0"
]

[tool.briefcase.app.zhihuDecryptApp.linux]
requires = [
    "toga-gtk~=0.3.1",
]

[tool.briefcase.app.zhihuDecryptApp.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    # Needed to compile PyGObject wheel
    "libgirepository1.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK
    "libgtk-3-0",
    # Needed to provide GI bindings to GTK
    "libgirepository-1.0-1",
    "gir1.2-gtk-3.0",
    # Needed to provide WebKit2 at runtime
    # "libwebkit2gtk-4.0-37",
    # "gir1.2-webkit2-4.0",
]

[tool.briefcase.app.zhihuDecryptApp.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk3",
]

[tool.briefcase.app.zhihuDecryptApp.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2
    # "webkit2gtk",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk",
]

[tool.briefcase.app.zhihuDecryptApp.linux.appimage]
manylinux = "manylinux2014"

system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
    # Needed to provide GTK
    "gtk3-devel",
    # Dependencies that GTK looks for at runtime, that need to be
    # in the build environment to be picked up by linuxdeploy
    "libcanberra-gtk3",
    "PackageKit-gtk3-module",
    "gvfs-client",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk3",
]
linuxdeploy_plugins = [
    "DEPLOY_GTK_VERSION=3 gtk",
]

[tool.briefcase.app.zhihuDecryptApp.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "44"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.zhihuDecryptApp.windows]
requires = [
    "toga-winforms~=0.3.1",
]

# Mobile deployments
[tool.briefcase.app.zhihuDecryptApp.iOS]
requires = [
    "toga-iOS~=0.3.1",
    "std-nslog~=1.0.0"
]

[tool.briefcase.app.zhihuDecryptApp.android]
requires = [
    "toga-android~=0.3.1"
]

# Web deployments
[tool.briefcase.app.zhihuDecryptApp.web]
requires = [
    "toga-web~=0.3.1",
]
style_framework = "Shoelace v2.3"

[tool.poetry]
name = "zhihudecryptapp"
version = "0.0.1"
description = "The app to decrypt zhihu's encrypted (probably not) passages."
authors = ["cxzlw <wsc_zds@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
toga = "^0.3.1"
briefcase = "^0.3.14"
zhihuDecrypt = { path = "src/zhihuDecrypt" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
